2002-06-20  Ben Wing  <ben@xemacs.org>

	* s/cygwin32.h:
	Allow pdump to work under Cygwin (mmap is broken, so need to undefine
	HAVE_MMAP).
	
	* s/win32-common.h:
	* s/win32-common.h (NO_MATHERR):
	* s/windowsnt.h:

	Support for fastcall.  Add WIN32_ANY for identifying all Win32
	variants (Cygwin, native, MinGW).  Both of these are properly used
	in another ws.

2002-06-20  Ben Wing  <ben@xemacs.org>

	* alloc.c:
	* alloc.c (disksave_object_finalization):
	* alloc.c (garbage_collect_1):
	* balloon-x.c:
	* balloon-x.c (alloc_color):
	* balloon-x.c (init):
	* buffer.c:
	* buffer.c (Fkill_buffer):
	* bytecode.c:
	* callint.c:
	* cm.c:
	* cmdloop.c:
	* cmdloop.c (Frecursive_edit):
	* cmdloop.c (Fcommand_loop_1):
	* cmds.c:
	* console-gtk.c:
	* console-gtk.h:
	* console-msw.c:
	* console-msw.h:
	* console-msw.h (struct):
	* console-msw.h (wrap_mswindows_dialog_id):
	* console-stream.c:
	* console-stream.h:
	* console-stream.h (stream_canonicalize_device_connection):
	* console-tty.c:
	* console-tty.h:
	* console-x.c:
	* console-x.h:
	* console-x.h (Xt_SET_VALUE):
	* console.c:
	* console.c (Fcdfw_console):
	* console.h:
	* console.h (CDFW_CONSOLE):
	* device-gtk.c:
	* device-gtk.c (gtk_delete_device):
	* device-gtk.c (Fgtk_display_visual_class):
	* device-gtk.c (syms_of_device_gtk):
	* device-gtk.c (vars_of_device_gtk):
	* device-msw.c:
	* device-tty.c:
	* device-x.c:
	* device-x.c (x_init_device):
	* device-x.c (x_delete_device):
	* device-x.c (x_get_resource_prefix):
	* device-x.c (Fdefault_x_device):
	* device-x.c (vars_of_device_x):
	* device.c:
	* device.c (allocate_device):
	* device.c (device_console):
	* device.c (init_global_resources):
	* device.c (init_device_resources):
	* device.c (Fdefault_device):
	* device.c (Fmake_device):
	* device.c (delete_device_internal):
	* device.c (call_critical_lisp_code):
	* device.c (syms_of_device):
	* device.c (vars_of_device):
	* device.h:
	* devslots.h:
	* dialog-gtk.c:
	* dialog-msw.c:
	* dialog-x.c:
	* dialog.c: